[gd_scene load_steps=4 format=3 uid="uid://bwrjya1lyu51r"]

[ext_resource type="Script" uid="uid://ckcmgpostayjv" path="res://Scripts/level_selection_screen.gd" id="1_2wveg"]
[ext_resource type="FontFile" uid="uid://d3voj87xta0rd" path="res://Assets/Font/Minecraft.ttf" id="1_tgqro"]
[ext_resource type="AudioStream" uid="uid://bf58nr7tepnd8" path="res://Assets/Sound/click.wav" id="3_tnh7m"]

[node name="LevelSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -69.0
offset_right = -1217.0
offset_bottom = -677.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wveg")

[node name="Levels" type="Control" parent="."]
anchors_preset = 0
offset_left = -19.0
offset_top = -12.0
offset_right = 21.0
offset_bottom = 28.0

[node name="LevelOne" type="Button" parent="Levels"]
layout_mode = 0
offset_right = 68.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(0, 12)
theme_override_fonts/font = ExtResource("1_tgqro")
text = "Level 1"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tnh7m")
volume_db = 10.0
pitch_scale = 3.0

[connection signal="mouse_entered" from="Levels/LevelOne" to="." method="_on_level_one_mouse_entered"]
[connection signal="mouse_exited" from="Levels/LevelOne" to="." method="_on_level_one_mouse_exited"]
[connection signal="pressed" from="Levels/LevelOne" to="." method="_on_level_one_pressed"]
